# rvncorevirtualbox

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/: core_virtualbox.h  core_virtualbox_def.h  cpu_virtualbox.h  memory_chunk.h  memory_virtualbox.h  physical_memory.h
src/: core_virtualbox.cpp  cpu_virtualbox.cpp  memory_chunk.cpp  memory_virtualbox.cpp  physical_memory.cpp  physical_memory_impl.h
test/: CMakeLists.txt  test_memory_physical.cpp  test_read_core.cpp
